added photos to repository

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-<!--    <link rel="icon" type="image/svg+xml" href="/vite.svg" />-->
+    <link rel="icon" type="image/png" href="/assets/take-away.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Delivery</title>
+    <title>Delivery | Make your order today!</title>
+    <meta name="description" content="Fast and reliable food delivery service. Enjoy fresh meals delivered straight to your door. Order now!">
   </head>
   <body>
     <div id="root"></div>
